# showmethekey

./: .clang-format  .clang_complete  .dir-locals.el  .gitignore  README.md  meson.build  meson_options.txt  meson_post_install.py
common/: config-meson.h.in  config.h.in
debian/: changelog  control  copyright  rules
dists/: meson.build  one.alynx.showmethekey.desktop.in  one.alynx.showmethekey.gschema.xml  one.alynx.showmethekey.metainfo.xml  one.alynx.showmethekey.policy.in  one.alynx.showmethekey.rules  showmethekey.desktop  showmethekey.desktop.in
docs/: CNAME  index.html
docs/css/: index.css
showmethekey-cli/: main.c  meson.build  util.c  util.h
showmethekey-gtk/: main.c  meson.build  one.alynx.showmethekey.gresource.xml  showmethekey.gresource.xml  smtk-app-win-menu.ui  smtk-app-win.c  smtk-app-win.h  smtk-app-win.ui  smtk-app.c  smtk-app.h  smtk-event.c  smtk-event.h  smtk-keymap-list.c  smtk-keymap-list.h  smtk-keys-area.c  smtk-keys-area.h  smtk-keys-emitter.c  smtk-keys-emitter.h  smtk-keys-mapper.c  smtk-keys-mapper.h  smtk-keys-win-header-bar.css  smtk-keys-win-keys-label.css  smtk-keys-win.c  smtk-keys-win.css  smtk-keys-win.h  smtk-keys-win.ui  smtk-usage-win.c  smtk-usage-win.h  smtk-usage-win.ui  smtk.h  style.css
showmethekey-gtk/po/: LINGUAS  POTFILES  POTFILES.in  es_ES.po  meson.build  showmethekey.pot  zh_CN.UTF-8.po  zh_CN.po
